# rust_server

./: README.md
web-server/: Cargo.toml
web-server/src/: commonss.rs  lib.rs  logger.rs  main.rs  test.rs
web-server/src/common/: tests.rs
web-server/src/config/: app_config.rs  config_default_svc.rs  config_test_svc.rs  mod.rs
web-server/src/handlers/: default.rs  mod.rs  parts.rs  products.rs  test.rs
web-server/src/models/: err.rs  mod.rs  responsewrapper.rs
web-server/src/models/test/: tests.rs
