[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-web-validator = "6.0.0"

quick-xml = "0.37.2"
bcrypt = "0.15.1"
colored = "2"
chrono = "=0.4.39"
thiserror = "1.0.58"
validator = { version = "0.16.1", features = ["derive"] }
serde_json = "1.0.114"
serde = { version = "1.0.217", features = ["derive"] }
tokio =  { version = "1.36.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
